compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__empty_char_literal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const k := ''"

---
ty_nodes:
def_kinds:
    DefId(0) Const(TyRef(Error))
error at 11..13: char literal is empty
