compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__equality_op_scalars_not_equal.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "\n    % Other scalars\n    var b : boolean\n\n    % should all produce boolean\n    var _v_res : boolean\n\n    _v_res := b not= b\n    "

---
"b"@(FileId(1), 29..30) [Declared]: boolean
"_v_res"@(FileId(1), 83..89) [Declared]: boolean
"<root>"@(dummy) [Declared]: <error>

