compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__equivalence_of_aliases.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "type a0 : int\ntype a1 : int\nvar i : int\nvar ia0 : a0\nvar ia1 : a1\n\n% base type & alias\nfor : i .. ia0 end for\nfor : i .. ia1 end for\nfor : ia0 .. i end for\nfor : ia1 .. i end for\n% alias with same base type\nfor : ia0 .. ia1 end for\nfor : ia1 .. ia0 end for\n"

---
"a0"@(FileId(1), 5..7) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"a1"@(FileId(1), 19..21) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"i"@(FileId(1), 32..33) [Declared]: int
"ia0"@(FileId(1), 44..47) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"ia1"@(FileId(1), 57..60) [Declared]: alias[DefId(LibraryId(0), LocalDefId(1))] of int
"<root>"@(dummy) [Declared]: <error>

